--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h2><span>Nemo</span> enim ipsam voluptatem quia voluptas</h2>
-                                    <p> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut. </p>
-                                    <a class="btn btn-primary btn-lg" href="#">Read More</a>
+                                    <h2><span>Crypto</span> Currencies</h2>
+                                    <p> Experience algorithmic trading across dozens of CryptoCurrency exchanges. World-class UI and rock-solid framework for traders.</p>
+                                    <a class="btn btn-primary btn-lg" href="#">Explore Now</a>
                                 </div>
                             </div>
                         </div>
