Travel bookings introduced in slider.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>HR Theme Two</title>
+    <title>Binary Myth</title>
 	<!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -67,8 +67,9 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2><span>Crypto</span> Currencies</h2>
-                                    <p> Experience algorithmic trading across dozens of CryptoCurrency exchanges. World-class UI and rock-solid framework for traders.</p>
-                                    <a class="btn btn-primary btn-lg" href="#">Explore Now</a>
+                                    <p> Experience algorithmic trading across dozens of CryptoCurrency exchanges.</p> 
+                                    <p> World-class UI and rock-solid framework for traders.</p>
+                                    <a class="btn btn-primary btn-lg" href="https://www.xchangerate.io">Trade Now</a>
                                 </div>
                             </div>
                         </div>
@@ -81,9 +82,10 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h2>Cum soluta nobis <span>TEMPORE</span></h2>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore. </p>
-                                    <a class="btn btn-primary btn-lg" href="#">Read More</a>
+                                    <h2>Travel <span>Bookings</span></h2>
+                                    <p> Fulfill international & domestic travel needs with one-stop portal.</p>
+                                    <p> Avail attractive discounts and splendid customer support.</p>
+                                    <a class="btn btn-primary btn-lg" href="http://www.sstravelhouse.com">Book Now</a>
                                 </div>
                             </div>
                         </div>
