--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2><span>Crypto</span> Currencies</h2>
-                                    <p> Experience algorithmic trading across dozens of CryptoCurrency exchanges.</p> 
+                                    <p> Experience algorithmic trading across dozens of exchanges.</p> 
                                     <p> World-class UI and rock-solid framework for traders.</p>
                                     <a class="btn btn-primary btn-lg" href="https://www.xchangerate.io">Trade Now</a>
                                 </div>
@@ -99,11 +99,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-9">
-                    <h2>Sed ut perspiciatis unde omnis iste</h2>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima.</p>
+                    <h2>Why are we so famous?</h2>
+                    <p>Simply because we solve problems. Every problem. Either yours or ours, we solve it with equal dedication.
+                        Since our passion for solving problem is not biased by origin of it. And this passion comes by-birth.
+                        Its only our practice which make us better everytime with struggle around varities of problems.
+                        But glitches and circumstances never became an excuse from reaching the final destination of solution.
+                    </p>
                 </div>
                 <div class="col-sm-3 text-right">
-                    <a class="btn btn-primary btn-lg" href="#">Reprehenderit Qui!</a>
+                    <a class="btn btn-primary btn-lg" href="#">Submit Problem(s)</a>
                 </div>
             </div>
         </div>
@@ -112,8 +116,8 @@
     <section id="features">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">OUR Features</h2>
-                <p class="text-center wow fadeInDown">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium<br>voluptatum deleniti atque corrupti quos dolores et quas</p>
+                <h2 class="section-title text-center wow fadeInDown">OUR Expertise</h2>
+                <p class="text-center wow fadeInDown">Let's list down a very high-level set of skills which we acquired in our problem solving journey.</p>
             </div>
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeft">
@@ -125,8 +129,8 @@
                             <i class="fa fa-download"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Officia Deserunt</h4>
-                            <p>Similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem</p>
+                            <h4 class="media-heading">App Development</h4>
+                            <p>Android, iOS, Wearables, Desktop, Web Applications and DevOps/Automations</p>
                         </div>
                     </div>
 
@@ -135,8 +139,8 @@
                             <i class="fa fa-database"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Soluta Nobis</h4>
-                            <p>Eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda</p>
+                            <h4 class="media-heading">Databases</h4>
+                            <p>Microsoft SQL Server, MySql, SyBase, DocumentDB, Oracle and MS-Access</p>
                         </div>
                     </div>
 
@@ -145,8 +149,8 @@
                             <i class="fa fa-gamepad"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Temporibus Autem</h4>
-                            <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates</p>
+                            <h4 class="media-heading">Gaming & Internet of Things (IoT)</h4>
+                            <p>Unity, C++, C#, VB.NET, ASP.NET, PHP, Python, Unity and GoLang</p>
                         </div>
                     </div>
 
@@ -155,8 +159,8 @@
                             <i class="fa fa-cloud"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Itaque earum</h4>
-                            <p>Rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut</p>
+                            <h4 class="media-heading">Cloud Computing</h4>
+                            <p>Azure Storage, Functions, Logic-Apps, Microservices, Amazon EC2, Cloudwatch, Lambda and SaaS</p>
                         </div>
                     </div>
                 </div>
