--- a/index.html
+++ b/index.html
@@ -542,50 +542,15 @@
         </div>
     </section><!--/#pricing-->
 
-    <section id="testimonial">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
-
-                    <div id="carousel-testimonial" class="carousel slide text-center" data-ride="carousel">
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item active">
-                                <p><img class="img-circle img-thumbnail" src="images/testimonial/01.jpg" alt=""></p>
-                                <h4>Yetty L. Steven</h4>
-                                <small>Nemo enim ipsam voluptatem quia voluptas sit</small>
-                                <p>Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est</p>
-                            </div>
-                            <div class="item">
-                                <p><img class="img-circle img-thumbnail" src="images/testimonial/02.jpg" alt=""></p>
-                                <h4>Gerry Munstons</h4>
-                                <small>Itaque earum rerum hic tenetur a sapiente delectus</small>
-                                <p>Ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Sed ut perspiciatis unde omnis</p>
-                            </div>
-                        </div>
-
-                        <!-- Controls -->
-                        <div class="btns">
-                            <a class="btn btn-primary btn-sm" href="#carousel-testimonial" role="button" data-slide="prev">
-                                <span class="fa fa-angle-left" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="btn btn-primary btn-sm" href="#carousel-testimonial" role="button" data-slide="next">
-                                <span class="fa fa-angle-right" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!--/#testimonial-->
-
     <section id="get-in-touch">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">NOSTRUM ALIQUAM INCIDUNT</h2>
-                <p class="text-center wow fadeInDown">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia<br>consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt</p>
+                <h2 class="section-title text-center wow fadeInDown">Contact Us</h2>
+                <p class="text-center wow fadeInDown">We welcome you to meet us at below stated address. 
+                    <br />
+                    Also, if you don't have much time then you can directly call us as well. 
+                    Last but not least, if you want to keep your privacy then simply drop an email.
+                </p>
             </div>
         </div>
     </section><!--/#get-in-touch-->
@@ -602,12 +567,13 @@
 
                             <address>
                               <strong>Your Company, Inc.</strong><br>
-                              795 Folsom Ave, Suite 600<br>
-                              San Francisco, CA 94107<br>
-                              <abbr title="Phone">P:</abbr> (123) 456-7890
+                              70-A
+                              D Block<br>
+                              Sitpuri Part-1, NEw Delhi - 110045<br>
+                              <abbr title="Phone">P:</abbr> (+91) 935-441-5697
                             </address>
 
-                            <form id="main-contact-form" name="contact-form" method="post" action="contact-us.send.php">
+                            <!-- <form id="main-contact-form" name="contact-form" method="post" action="contact-us.send.php">
                                 <div class="form-group">
                                     <input type="text" name="name" class="form-control" placeholder="Name" required>
                                 </div>
@@ -621,7 +587,7 @@
                                     <textarea name="message" class="form-control" rows="8" placeholder="Message" required></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Send Message</button>
-                            </form>
+                            </form> -->
                         </div>
                     </div>
                 </div>
@@ -633,7 +599,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2016 Your Company.
+                    &copy; 2019 Binary Myth.
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
@@ -652,7 +618,6 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/mousescroll.js"></script>
     <script src="js/smoothscroll.js"></script>
