--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                             <h3>Contact Info</h3>
 
                             <address>
-                              <strong>Your Company, Inc.</strong><br>
+                              <strong>Binary Myth Pvt. Ltd.</strong><br>
                               70-A
                               D Block<br>
                               Sitpuri Part-1, NEw Delhi - 110045<br>
