Support email address ready.

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                               Sitpuri Part-1 <br>
                               New Delhi - 110045<br><br>
                               <abbr title="Phone">Call:</abbr> (+91) 935-441-5697 <br>
-                              <abbr title="Email">Email:</abbr> g-p@live.in
+                              <abbr title="Email">Email:</abbr> support@binarymyth.com
                             </address>
 
                             <!-- <form id="main-contact-form" name="contact-form" method="post" action="contact-us.send.php">
