--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -511,7 +511,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2019 Binary Myth.
+                    &copy; 2020 Binary Myth.
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
