--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
                             <h3>Contact Info</h3>
 
                             <address>
-                              <strong>Binary Myth Pvt. Ltd.</strong><br><br>
-                              70-A
+                              <strong>Binary Myth</strong><br><br>
+                              70-A<br>
                               D Block<br>
                               Sitpuri Part-1 <br>
                               New Delhi - 110045<br><br>
@@ -511,7 +511,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2020 Binary Myth.
+                    &copy; 2021 Binary Myth.
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
